# g2_robot

./: .gitignore  README.md  detection_maria.py  detection_ms1_OUTDATED.py  new_diogo.py  notes.txt  temporary.xml
MAPS/: collection_1_2.tsv  collection_2_2.tsv  collection_hard.tsv  compare_maps.py  exploration_1_2.tsv  exploration_hard.tsv  hard_success_run.tsv  map_3.tsv  map_exploration.tsv  map_exploration_exploration_1_2.tsv  map_exploration_exploration_2_2.tsv  map_exploration_exploration_hard.tsv
NEW_VERSION/detection/: CMakeLists.txt  package.xml  setup.py
NEW_VERSION/detection/detection/: detection.py  detection_maria.py
NEW_VERSION/detection/msg/: DetectionMsg.msg
NEW_VERSION/detection_interfaces/: CMakeLists.txt  package.xml
NEW_VERSION/g2_robot_launch/: package.xml
NEW_VERSION/g2_robot_launch/launch/: g2_robot_launch_hardware.xml  g2_robot_launch_mission.xml  temporary.xml
NEW_VERSION/icp/: package.xml
NEW_VERSION/manipulation/: package.xml  setup.py
NEW_VERSION/mapping/: package.xml  setup.py
NEW_VERSION/mission_control/: package.xml  setup.py
NEW_VERSION/motion_control/: package.xml  setup.py
NEW_VERSION/test_code/: detection_pub.py  detection_sub.py  test_vel.py  test_vel_pub.py  test_write_map.py
PREVIOUS_VERSION/: detection_maria.py
PREVIOUS_VERSION/detection/: package.xml  setup.py
PREVIOUS_VERSION/g2_robot_launch/: setup.cfg  setup.py
PREVIOUS_VERSION/icp/: CMakeLists.txt  package.xml
PREVIOUS_VERSION/icp/src/: icp_processor.cpp
PREVIOUS_VERSION/odometry/: setup.py
arm/: package.xml  setup.py
arm/arm/: simple_arm_controller.py
armplanner/: package.xml  setup.cfg  setup.py
armplanner/armplanner/: Readmestandin.py  armCameraObj.py  armMove.py  armPlanner.py  armVisual.py  armVisualphi.py  armplanner.py  brownishPlush.MOV  calibration.npz  calibration2.npz  cameraCalibration.py  client.py  detectionService.py  dropService.py  grayPlush.MOV  greenCube.MOV  hsv_finder.py  kinematics.py  kinematics2.py  kinematics3.py  manipulation.py  oldcode.py  pickupService.py  pickupsuccessService.py  serviceTest.py  test2.py  test3.py
data_types/: CMakeLists.txt  package.xml
detection/: CMakeLists.txt  package.xml  setup.py
detection/detection/: Lidar_Processor_Mapper.py  detection.py  detection_maximos_OUTDATED.py  object_mapping.py  occupancy_mapping_gray.py
detection/resource/: map_1.tsv  workspace_1.tsv
detection/src/: icp_processor.cpp
detection_interfaces/: package.xml
detection_interfaces/msg/: DetectionMsg.msg
docs/: index.html
g2_robot_launch/: package.xml  setup.py
g2_robot_launch/launch/: g2_robot_MS0_launch.xml  g2_robot_MS0_launch_CHECK.xml  g2_robot_frames_launch.xml  g2_robot_launch.xml  g2_robot_launch_arm.xml  g2_robot_launch_hardware.xml  g2_robot_launch_mission.xml  g2_robot_launch_test.xml  planning_launch.xml  temporary.xml
icp/: CMakeLists.txt  Makefile  package.xml
icp/src/: icp_processor.cpp  icp_processor_ref.cpp
log/: latest_build
manipulation/: package.xml  setup.py
manipulation/manipulation/: arm_controller.py
mission_control/: package.xml  setup.py
mission_control/mission_control/: Processor_Mapper.py  collection_controller.py  (+7 more)
motion_control/: package.xml  setup.py
my_custom_interfaces/: CMakeLists.txt  package.xml
my_custom_interfaces/install/: local_setup.sh  setup.sh
my_custom_interfaces/install/my_custom_interfaces/include/my_custom_interfaces/my_custom_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
my_custom_interfaces/install/my_custom_interfaces/include/my_custom_interfaces/my_custom_interfaces/srv/: pickup.h  pickup.hpp
my_custom_interfaces/install/my_custom_interfaces/include/my_custom_interfaces/my_custom_interfaces/srv/detail/: pickup__builder.hpp  pickup__functions.h  pickup__rosidl_typesupport_fastrtps_c.h  pickup__rosidl_typesupport_fastrtps_cpp.hpp  pickup__rosidl_typesupport_introspection_c.h  pickup__rosidl_typesupport_introspection_cpp.hpp  pickup__struct.h  pickup__struct.hpp  pickup__traits.hpp  pickup__type_support.h  pickup__type_support.hpp
my_custom_interfaces/install/my_custom_interfaces/share/ament_index/resource_index/package_run_dependencies/: my_custom_interfaces
my_custom_interfaces/install/my_custom_interfaces/share/ament_index/resource_index/parent_prefix_path/: my_custom_interfaces
my_custom_interfaces/install/my_custom_interfaces/share/ament_index/resource_index/rosidl_interfaces/: my_custom_interfaces
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_custom_interfaces__rosidl_generator_cExport.cmake  export_my_custom_interfaces__rosidl_generator_cppExport.cmake  my_custom_interfacesConfig-version.cmake  my_custom_interfacesConfig.cmake  my_custom_interfaces__rosidl_typesupport_cExport.cmake  my_custom_interfaces__rosidl_typesupport_cppExport.cmake  my_custom_interfaces__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/srv/: Pickup.idl  Pickup.json  Pickup.srv
my_custom_interfaces/log/: latest_build
my_custom_interfaces/srv/: GetPosition.srv  Pickup.srv
odometry/: package.xml  setup.py
path_planning/: package.xml  setup.py
(+57 files in other folders)
