<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armplanner</name>
  <version>0.0.0</version>
  <description>Arm-camera processing and pickup/drop service nodes for the G2 robot.</description>
  <maintainer email="email@example.com">TODO</maintainer>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>robp_interfaces</depend>
  <depend>rclpy</depend>
  <depend>tf_transformations</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
