<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g2_robot_launch</name>
  <version>0.0.0</version>
  <description>Launch files for the G2 robot ROS 2 packages.</description>
  <author email="email@example.com">TODO</author>
  <maintainer email="email@example.com">TODO</maintainer>
  <license>MIT</license>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ROS packages dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>
  <depend>teleop_twist_joy</depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- robbp_robot packages dependencies -->
  <depend>robp_launch</depend>
  
  <!-- Project packages used by the launch files -->
  <depend>arm</depend>
  <depend>armplanner</depend>
  <depend>detection</depend>
  <depend>detection_interfaces</depend>
  <depend>icp</depend>
  <depend>mission_control</depend>
  <depend>motion_control</depend>
  <depend>my_custom_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
