<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icp</name>
  <version>0.0.0</version>
  <description>ICP-based localization correction for the G2 robot.</description>
  <maintainer email="email@example.com">TODO</maintainer>
  <license>MIT</license>

  <!-- Dependencies for C++ -->
  <depend>rclcpp</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>ament_cmake</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
