<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulation</name>
  <version>0.0.0</version>
  <description>Package containing all necessary scripts for arm manipulation</description>
  <maintainer email="hugoad@kth.se">Hugo Dezerto</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ROS packages dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- Custom-built packages dependencies -->
  <!-- add the new custom built packages HERE -->



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>