<?xml version="1.0"?>
<package format="3">
  <name>my_custom_interfaces</name>
  <version>0.0.0</version>
  <description>Custom services for pickup, drop, and position requests.</description>
  <maintainer email="email@example.com">TODO</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies required to generate code from .srv -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend> 
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- For introspection / other middlewares (optional but good) -->
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- For testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
