<?xml version="1.0"?>
<package format="3">
  <name>detection</name>
  <version>0.0.0</version>
  <description>Package for custom DetectionMsg message.</description>
  <maintainer email="hugo.afonso.dezerto@gmail.com">hugoad</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies for custom messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Member of ROS 2 message generation group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Optional Linting and Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
