<?xml version="1.0"?>
<package format="3">
  <name>detection</name>
  <version>0.0.0</version>
  <description>Package for custom DetectionMsg message.</description>
  <maintainer email="email@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies for custom messages -->
  <exec_depend>detection_interfaces</exec_depend>

  <!-- Optional Linting and Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
